Fix overlap on lang switcher

--- a/src/less/website/homepage.less
+++ b/src/less/website/homepage.less
@@ -1,3 +1,7 @@
+.cardsContainer{
+  position: absolute;
+  width: 95%;
+}
 .devCards{
   display: inline-block;
   background-color: #fff;
@@ -38,7 +42,7 @@
 }
 #hero{
   padding: 20px 30px;
-  max-height: 350px;
+  padding-bottom: 170px;
   h1{
     line-height: 1.3em;
     max-width: 90%;
