--- a/src/less/website/mobilequeries.less
+++ b/src/less/website/mobilequeries.less
@@ -11,7 +11,7 @@
     padding: 8px 30px;
   }
   #hero{
-    max-height: 260px;
+    padding-bottom: 120px;
   }
 }
 @media (max-width: 1178px){
@@ -21,9 +21,6 @@
     .devCards:hover{
       cursor: pointer;
       cursor: hand;
-    }
-    #hero{
-      max-height: 330px;
     }
     h2 i{
       display: none;
